# fsio

./: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
docs/: index.html
docs/api/: aliases.js  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
docs/api/fsio/: all.html  index.html  sidebar-items.js
docs/api/fsio/directory/: fn.create.html  fn.create_parent.html  fn.delete.html  index.html  sidebar-items.js
docs/api/fsio/error/: enum.ErrorInfo.html  enum.FsIOError.html  index.html  sidebar-items.js  struct.FsIOError.html
docs/api/fsio/file/: fn.append_file.html  fn.append_text_file.html  fn.delete.html  fn.delete_ignore_error.html  fn.ensure_exists.html  fn.modify_file.html  fn.read_file.html  fn.read_text_file.html  fn.write_file.html  fn.write_text_file.html  index.html  sidebar-items.js
docs/api/fsio/path/: fn.canonicalize_as_string.html  fn.canonicalize_or.html  fn.get_basename.html  fn.get_last_modified_time.html  fn.get_parent_directory.html  index.html  sidebar-items.js
docs/api/fsio/path/as_path/: index.html  sidebar-items.js  trait.AsPath.html
docs/api/fsio/path/from_path/: index.html  sidebar-items.js  trait.FromPath.html
docs/api/fsio/types/: index.html  sidebar-items.js  type.FsIOResult.html
docs/api/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/api/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/api/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/api/implementors/fsio/path/as_path/: trait.AsPath.js
docs/api/implementors/std/error/: trait.Error.js
docs/api/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/api/search.desc/fsio/: fsio-desc-0-.js
docs/api/src/fsio/: directory.rs.html  error.rs.html  file.rs.html  lib.rs.html  types.rs.html
docs/api/src/fsio/path/: as_path.rs.html  from_path.rs.html  mod.rs.html
docs/api/trait.impl/core/error/: trait.Error.js
docs/api/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
docs/api/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/api/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/api/trait.impl/fsio/path/from_path/: trait.FromPath.js
docs/api/type.impl/core/result/: enum.Result.js
examples/: example.rs
src/: directory.rs  directory_test.rs  error.rs  error_test.rs  file.rs  file_test.rs  lib.rs  types.rs
src/path/: as_path.rs  as_path_test.rs  from_path.rs  from_path_test.rs  mod.rs  mod_test.rs  temp_path.rs
tests/: directory_test.rs  file_test.rs  path_test.rs
